complete html, work on sripts

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <form>
-    <br>
+    <div class="background-color"    <br>
     <div class="form-group">
       <label for="color">What is your favorite color?</label>
       <input id="color" class="form-control" type="color">
+       <button type="submit" form="form1" value="Submit">Submit</button>
     </div><br>
     <div class="form-group">
       <label for="born">Date of birth:</label>
@@ -62,7 +63,8 @@
         I would literally rather sit in traffic.
       </label>
     </div>
-    <br><div>  <button type="submit" form="form1" value="Submit">Submit</button>
+    <br><div>
+    </div>
     </div>
   </form>
 </body>
